# real-time-liquid-lens-focusing

./: README  README.docx
AutoFocusEmbedded/: CMakeLists.txt
AutoFocusEmbedded/include/: ADM00931.hpp  FFTfocus.hpp  IFocusAlgorithm.hpp  ScoreFinder.hpp  SobelMethod.hpp  Trigger.hpp  VideoCapture.hpp
AutoFocusEmbedded/src/: ADM00931.cpp  AutoFocusEmbedded.cpp  FFTfocus.cpp  IFocusAlgorithm.cpp  ScoreFinder.cpp  Trigger.cpp  VideoCapture.cpp  focus.cpp
AutoFocusNonEmbedded/: CMakeLists.txt  README.md
AutoFocusNonEmbedded/include/: BackgroundProcessing.hpp  CamControl.hpp  Flexiboard.hpp  SerialPort.hpp
AutoFocusNonEmbedded/src/: AutoFocusNonEmbedded.cpp  CamControl.cpp  Flexiboard.cpp  SerialPort.cpp
TestSuite/: CMakeLists.txt
TestSuite/include/: ADM00931.hpp  VideoCapture.hpp
TestSuite/src/: ADM00931.cpp  AutoFocusNoCam.cpp  TestSetsGenerator.cpp  Trigger.cpp  VideoCapture.cpp
